--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container" id="inputs">
+
       <!-- Timeblocks go here -->
     </div>
     <script src="script.js"></script>
