--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container" id="inputs">
+        
 
       <!-- Timeblocks go here -->
     </div>
@@ -38,4 +39,8 @@
     <script src="script.js"></script>
 
   </body>
+  <footer>
+
+    Created by Remy Guts
+  </footer>
 </html>
